# booldog-prev

./: .clang-format  .gitignore  README.md  boo_allocation.h  boo_application.h  boo_architecture.h  boo_array.h  boo_atomic.h  boo_base_loader.h  boo_base_module.h  boo_bits_utils.h  boo_check.h  boo_classes_string.h  boo_console_utils.h  boo_cp1251.h  boo_cp1251_consts.h  boo_d2d1_context.h  boo_debug_info.h  boo_directory_utils.h  boo_environment_utils.h  boo_error.h  boo_error_format.h  boo_executable_utils.h  boo_file_utils.h  boo_hash_sha1.h  boo_heap_allocator.h  boo_if.h  boo_interop_avcodec.h  boo_interop_avformat.h  boo_interop_libjpeg_turbo.h  boo_io_directory.h  boo_io_file.h  boo_io_utils.h  boo_json.h  boo_list.h  boo_lockable_pointer.h  boo_lockfree_queue.h  boo_lockfree_stack.h  boo_math_utils.h  boo_media_enums.h  (+44 more)
config/: config.h
data/: ieroglif..txt
data/json/: json_mem_leak.txt
data/multimedia/: 1.i420  1.yv12  2.yv12  3.yv12
docs/: LINKS.md
extern_lib/windows/Win32/: gtest.lib  yajl_s.lib
extern_lib/windows/x64/: gtest.lib
extern_sources/gtest-1.7.0/msvc/: gtest-md.sln
include/: boo_allocator.h  boo_application.h  boo_array.h  boo_base64.h  boo_base_loader.h  boo_base_module.h  boo_bits_utils.h  boo_check.h  boo_classes_string.h  boo_console_utils.h  boo_cp1251.h  boo_cp1251_consts.h  boo_d2d1_context.h  boo_debug_info.h  boo_directory_utils.h  boo_doubly_linked_list.h  boo_environment_utils.h  boo_error.h  boo_error_format.h  boo_executable.h  boo_executable_utils.h  boo_file_utils.h  boo_fps_counter.h  boo_hash_md5.h  boo_hash_sha1.h  boo_hash_times33.h  boo_heap_allocator.h  boo_holder_allocator.h  boo_if.h  boo_interlocked.h  boo_io_directory.h  boo_io_file.h  boo_io_utils.h  boo_json.h  boo_list.h  boo_lockfree_queue.h  boo_math_utils.h  boo_media_enums.h  boo_mem.h  boo_mem_cluster.h  (+59 more)
test/: _build_win32_release.bat  _build_win64_release.bat  _build_x64.sh  test.ruxprj  test.vcxproj
test/src/: main.cpp
test_data/: maps  maps_crlf
test_data/json/: json_large_string.txt  json_test1.txt  json_test2.txt
test_without_gtest/: _build.bat  test.ruxprj  test.vcxproj
test_without_gtest/src/: main.cpp
tests/c/json/: .clang-format  CMakeLists.txt  main.c
tests/multimedia/: CMakeLists.txt  main.cpp  premake5.lua
tests/threading/: acutest.h  main.cpp  premake5.lua  test.vcxproj
tests/с++03/std_allocator/: CMakeLists.txt  main.cpp
